test/compile_errors/stage1/obj/compileError_shows_traceback_of_references_that_caused_it.zig
const foo = @compileError("aoeu",);

const bar = baz + foo;
const baz = 1;

export fn entry() i32 {
    return bar;
}

// @compileError shows traceback of references that caused it
//
// tmp.zig:1:13: error: aoeu
